--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <img v-bind:src= "image">
     </div>
   </body>
-  <script>
+  <script type="text/javascript">
       var app = new Vue({
         el: '#app',
         data: {
