--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
   <head>
     
-    <script src="http://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     
   </head>
   <body>
