added back image code

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div id="app">
       <p>{{ message }}</p>
-      <!-- <img v-bind:src= "image"> -->
+      <img v-bind:src= "image">
     </div>
     <script type="text/javascript">
       var app = new Vue({
