added rest of dojos

--- a/index.html
+++ b/index.html
@@ -60,10 +60,22 @@
     </div>
     <script type="text/javascript">
     var lvls= [
+      {label: 'Axe Dojo 1', subtype: "Axe", type: "Dojo", value: 5, largest: '35'},
+      {label: 'Axe Dojo 2', subtype: "Axe", type: "Dojo", value: 26, largest: '35'},
+      {label: 'Blade Dojo 1', subtype: "Blade", type: "Dojo", value: 5, largest: '35'},
+      {label: 'Blade Dojo 2', subtype: "Blade", type: "Dojo", value: 26, largest: '35'},
+      {label: 'Bow Dojo 1', subtype: "Bow", type: "Dojo", value: 5, largest: '35'},
+      {label: 'Bow Dojo 2', subtype: "Bow", type: "Dojo", value: 26, largest: '35'},
+      {label: 'Dagger Dojo 1', subtype: "Dagger", type: "Dojo", value: 5, largest: '35'},
+      {label: 'Dagger Dojo 2', subtype: "Dagger", type: "Dojo", value: 26, largest: '35'},
+      {label: 'Lance Dojo 1', subtype: "Lance", type: "Dojo", value: 5, largest: '35'},
+      {label: 'Lance Dojo 2', subtype: "Lance", type: "Dojo", value: 26, largest: '35'},
       {label: 'Staff Dojo 1', subtype: "Staff", type: "Dojo", value: 5, largest: '35'},
       {label: 'Staff Dojo 2', subtype: "Staff", type: "Dojo", value: 26, largest: '35'},
       {label: 'Sword Dojo 1', subtype: "Sword", type: "Dojo", value: 11, largest: '35'},
-      {label: 'Sword Dojo 2', subtype: "Sword", type: "Dojo", value: 16, largest: '35'}
+      {label: 'Sword Dojo 2', subtype: "Sword", type: "Dojo", value: 16, largest: '35'},
+      {label: 'Wand Dojo 1', subtype: "Wand", type: "Dojo", value: 11, largest: '35'},
+      {label: 'Wand Dojo 2', subtype: "Wand", type: "Dojo", value: 16, largest: '35'}
       ]
     var images= [
       {
