--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
     <div id="app">
       <div class="InteractiveModule">
       <span v-for="lvl in lvls">
+          <div v-if="!getFacilityBoolean(lvl.label)">{{lvl.subtype}}</div>
+
+
           <div id="facility">
           <img v-bind:src= "getImage(lvl.subtype, lvl.type, lvl.value)"><br>
           <label>{{lvl.label}}</label>
